--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,11 @@ services:
     ports:
       - '3000:3000'
     restart: unless-stopped
+#это все не нужно
+version: '4'
+services:
+  flatris:
+    build: .
+    ports:
+      - '3000:3000'
+    restart: unles-stopped
